--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,12 @@
 [project]
-name = "px"
+name = "py-px"
 authors = [{ name = "Ameer Arsala", email = "ameer.arsala03@gmail.com" }]
 description = "npx but for python"
-version = "0.1.0"
+version = "0.0.1"
 requires-python = ">= 3.10"
 dependencies = [
   "pydantic>2.0",
   "typer>=0.12.5,<0.13",
-  "tomli>=2.0.1,<3",
-  "tomli-w>=1.0.0,<2",
   "rich>=13.8.1,<14"
 ]
 
@@ -19,12 +17,15 @@ px = "px.main:app"
 build-backend = "hatchling.build"
 requires = ["hatchling"]
 
+[tool.hatch.build.targets.wheel]
+packages = ["px"]  # account for the discrepancy between the directroy 'px' and the pypi name 'py-px'
+
 [tool.pixi.project]
 channels = ["conda-forge"]
 platforms = ["linux-64", "osx-arm64", "win-64"]
 
 [tool.pixi.pypi-dependencies]
-px = { path = ".", editable = true }
+py-px = { path = ".", editable = true }
 
 [tool.pixi.feature.fdev.dependencies]
 ruff = "*"
@@ -39,6 +40,3 @@ build = "hatch build ./dist"
 [tool.pixi.environments]
 dev = { features = ["fdev"] }
 prod = { features = [] }
-
-[tool.ruff]
-target-version = "py310"
