--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,12 +3,19 @@ name = "python-px"
 authors = [{ name = "Ameer Arsala", email = "ameer.arsala03@gmail.com" }]
 description = "npx but for python"
 version = "0.0.10"
+readme = "README.md"
+license = { file = "LICENSE" }
 requires-python = ">= 3.10"
 dependencies = [
   "pydantic>2.0",
   "typer>=0.12.5,<0.13",
   "rich>=13.8.1,<14"
 ]
+
+[project.urls]
+Repository = "https://github.com/AmeerArsala/px"
+Source = "https://github.com/AmeerArsala/px"
+Tracker = "https://github.com/AmeerArsala/px/issues"
 
 [project.scripts]
 px = "px.main:app"
